# 5

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  REUSE.toml  build_backend.py  pyproject.toml
build_tools/: __init__.py  hc_native_tools.py  ixsimpl_toolchain.py  llvm_toolchain.py
doc/: langref.md  lowering.md  schedules.md  simulator.md  upstream-lowering.md
examples/: __init__.py  amdgpu_gfx11_wmma_matmul.py
hc/: __init__.py  _compile.py  _frontend.py  _frontend_mlir.py  _intrinsic_contracts.py  _ixsimpl_loader.py  _mlir_loader.py  _pipeline.py  _resolve.py  _sim_types.py  _symbols_backend.py  core.py  simulator.py  symbols.py
hc/mlir/: __init__.py  ir.py  passmanager.py
hc/mlir/dialects/: __init__.py  hc.py  hc_front.py
hc/schedules/: __init__.py  front_to_hc.mlir
include/: CMakeLists.txt
include/hc-c/: Front.h  HC.h
include/hc/Conversion/HCFrontToHC/: CMakeLists.txt  HCFrontToHC.h  Passes.td
include/hc/Front/IR/: CMakeLists.txt  HCFrontDialect.h  HCFrontDialect.td  HCFrontOps.h  HCFrontOps.td  HCFrontTypes.h  HCFrontTypes.td
include/hc/Front/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/hc/IR/: CMakeLists.txt  HCAttrs.h  HCAttrs.td  HCDialect.h  HCDialect.td  HCOps.h  HCOps.td  HCOpsInterfaces.h  HCOpsInterfaces.td  HCSymbols.h  HCTypes.h  HCTypes.td  HCTypesInterfaces.h  HCTypesInterfaces.td
include/hc/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  HC.cpp  HCFront.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/HCFrontToHC/: CMakeLists.txt  HCFrontToHCPass.cpp
lib/Front/IR/: CMakeLists.txt  HCFrontDialect.cpp  HCFrontOps.cpp  HCFrontTypes.cpp
lib/Front/Transforms/: CMakeLists.txt  HCFrontFoldRegionDefsPass.cpp  HCFrontInlinePass.cpp
lib/IR/: CMakeLists.txt  HCAttrs.cpp  HCDialect.cpp  HCInferTypeOpInterface.cpp  HCOps.cpp  HCSymbols.cpp  HCTypes.cpp
lib/Transforms/: CMakeLists.txt  HCDecomposeShapedValuesPass.cpp  HCInferTypesPass.cpp  HCLowerBarePredicatesPass.cpp  HCMaterializeBoundExprsPass.cpp  HCNormalizeScopeRegionsPass.cpp  HCPromoteNamesPass.cpp  HCVerifyStaticShapesPass.cpp
python/: CMakeLists.txt  HCFrontExtensionNanobind.cpp
python/hc_mlir/dialects/: HCFrontOps.td  hc.py  hc_front.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  llvm-lit.py
test/HC/: constant-like.mlir  cse.mlir  decompose-shaped-values-invalid.mlir  decompose-shaped-values-nonstrict.mlir  decompose-shaped-values.mlir  infer-types-invalid.mlir  infer-types.mlir  invalid-symbolic.mlir  lower-bare-predicates.mlir  materialize-bound-exprs-invalid.mlir  materialize-bound-exprs.mlir  name-store-effects.mlir  normalize-scope-regions-invalid.mlir  normalize-scope-regions.mlir  ops-buffer-data.mlir  ops-control-flow.mlir  ops-getitem.mlir  ops-launch-geometry.mlir  ops-name-store.mlir  ops-scalar.mlir  ops-tuple.mlir  ops.mlir  promote-names-flat.mlir  promote-names-invalid.mlir  promote-names-regions.mlir  symbols-cpp.mlir  verify-hc.mlir  verify-static-shapes-invalid.mlir  verify-static-shapes.mlir
test/HCFront/: front-fold-region-defs.mlir  front-inline-invalid.mlir  front-inline.mlir  ops-roundtrip.mlir
test/HCFrontToHC/: basic.mlir  dsl-method-fallback.mlir  intrinsic-kwargs.mlir  invalid.mlir  pipeline-invalid.mlir  pre-sliced-base.mlir  wmma-pipeline.mlir
tests/: frontend_return_fixtures.py  test_build_backend.py  test_examples.py  test_frontend.py  test_frontend_mlir.py  test_hc_compile.py  test_hc_dialect_python_bindings.py  test_hc_front_dialect.py  test_hc_front_python_bindings.py  test_hc_mlir_loader.py  test_hc_native_tools.py  test_intrinsic_contracts.py  test_llvm_toolchain.py  test_public_api.py  test_resolve.py  test_simulator.py  test_symbols.py
tools/: CMakeLists.txt
tools/hc-opt/: CMakeLists.txt  hc-opt.cpp
tools/hc-symbols-test/: CMakeLists.txt  hc-symbols-test.cpp
