[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hc"
version = "0.1.0"
description = "Experimental high-level GPU kernel DSL."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "lizard", "mypy", "numpy", "pre-commit", "pytest", "reuse", "ruff"]
simulator = ["numpy"]
test = ["numpy", "pytest"]

[tool.setuptools]
packages = ["hc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
files = ["hc"]
python_version = "3.12"
strict = true
warn_unused_configs = true
