[build-system]
requires = [
    "cmake>=3.31",
    "ninja>=1.11",
    "setuptools>=75",
    "wheel",
]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "hc"
version = "0.1.0"
description = "Experimental high-level GPU kernel DSL."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black",
    "cmake>=3.31",
    "greenlet",
    "lizard",
    "mypy",
    "ninja>=1.11",
    "numpy",
    "pre-commit",
    "pytest",
    "reuse",
    "ruff",
]
simulator = ["greenlet", "numpy"]
test = ["greenlet", "numpy", "pytest"]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["hc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
files = ["hc"]
python_version = "3.12"
strict = true
warn_unused_configs = true
